# falcon.rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs
benches/: bench.rs
falcon-aggregate-sig/: Cargo.toml
falcon-plonk/: Cargo.toml
falcon-plonk/src/: falcon.rs  falcon_no_opt.rs  falcon_opt.rs  lib.rs
falcon-plonk/src/poly/: arithmetics.rs  dual_poly.rs  mod.rs  ntt_poly_var.rs  poly_var.rs  range_proof.rs
falcon-r1cs/: Cargo.toml  README.md
falcon-r1cs/examples/: constraint_counts.rs  pok_sig.rs
falcon-r1cs/src/: lib.rs
falcon-r1cs/src/circuits/: falcon_dual_ntt.rs  falcon_ntt.rs  falcon_schoolbook.rs  mod.rs
falcon-r1cs/src/gadgets/: arithmetics.rs  dual_poly.rs  misc.rs  mod.rs  poly.rs  range_proofs.rs
falcon-rust/: README.md  build.rs
falcon-rust/Falcon-impl-round3/: falcon.c
falcon-rust/benches/: bench.rs
falcon-rust/src/: lib.rs  param.rs
falcon-rust/src/arith/: mod.rs  param.rs  poly.rs
falcon-rust/src/binder/: bindings.rs
falcon-rust/src/structs/: kp.rs  mod.rs  pk.rs  sig.rs  sk.rs
script/: ntt_param.sage
src/: bindings.rs  decoder.rs  lib.rs  param.rs  poly_mul.rs  shake.rs  utils.rs
src/arith/: dual_ntt_poly.rs  dual_poly.rs  mod.rs  ntt_poly.rs  poly.rs
src/binder/: mod.rs
src/poly_mul/: mod.rs  schoolbook.rs
src/poly_mul/ntt/: mod.rs  param.rs
src/structs/: mod.rs  pk.rs  sig.rs  sk.rs
