[package]
name = "falcon-plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", features = [ "std" ] }

falcon-rust = { path = "../falcon-rust" }

ark-ff = { version = "0.3.0" }

num-bigint = { version = "0.4", default-features = false}

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "0.3.0" }
ark-std = { version = "0.3.0" }